# mit-scheme

./: .dir-locals.el  .gitattributes  .gitignore  Makefile  Tags.sh  mit-scheme_10.1.10.orig.tar.xz.delta  mit-scheme_10.1.10.orig.tar.xz.id  mit-scheme_10.1.11.orig.tar.xz.delta  mit-scheme_10.1.11.orig.tar.xz.id  mit-scheme_10.1.2.orig.tar.xz.delta  mit-scheme_10.1.2.orig.tar.xz.id  mit-scheme_10.1.3.orig.tar.xz.delta  mit-scheme_10.1.3.orig.tar.xz.id  mit-scheme_10.1.4.orig.tar.xz.delta  mit-scheme_10.1.4.orig.tar.xz.id  mit-scheme_10.1.5.orig.tar.xz.delta  mit-scheme_10.1.5.orig.tar.xz.id  mit-scheme_10.1.6.orig.tar.xz.delta  mit-scheme_10.1.6.orig.tar.xz.id  mit-scheme_10.1.7.orig.tar.xz.delta  mit-scheme_10.1.7.orig.tar.xz.id  mit-scheme_10.1.8.orig.tar.xz.delta  mit-scheme_10.1.8.orig.tar.xz.id  mit-scheme_10.1.9.orig.tar.xz.delta  mit-scheme_10.1.9.orig.tar.xz.id  mit-scheme_11.1.orig.tar.xz.delta  mit-scheme_11.1.orig.tar.xz.id  mit-scheme_11.2.orig.tar.xz.delta  mit-scheme_11.2.orig.tar.xz.id  mit-scheme_12.1.orig.tar.xz.delta  mit-scheme_12.1.orig.tar.xz.id  mit-scheme_7.7.0.orig.tar.gz.delta  mit-scheme_7.7.0.orig.tar.gz.id  mit-scheme_7.7.90+20050912.orig.tar.gz.delta  mit-scheme_7.7.90+20050912.orig.tar.gz.id  mit-scheme_7.7.90+20060201.orig.tar.gz.delta  mit-scheme_7.7.90+20060201.orig.tar.gz.id  mit-scheme_7.7.90+20060414.orig.tar.gz.delta  mit-scheme_7.7.90+20060414.orig.tar.gz.id  mit-scheme_7.7.90+20060906.orig.tar.gz.delta  (+25 more)
doc/: .gitignore  ChangeLog  Makefile.in  bootstrap  configure  configure.ac  configure.ac.~1~  configure.ac.~2~  configure.in  index.html  info-dir  make-common.in  mit-scheme.1  mit-scheme.1.~1~  mit-scheme.1.~2~  mkinstalldirs  scheme.1
doc/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2
doc/ffi/: Makefile.in  ffi.texinfo  prhello-Makefile  prhello.cdecl  prhello.scm
doc/imail/: Makefile.in  gfdl.texinfo  imail.texinfo
doc/ref-manual/: Makefile.in  acknowledgements.texi  associations.texi  bit-strings.texi  characters.texi  environments.texi  equivalence.texi  error.texi  gfdl.texinfo  graphics.texi  io.texi  lists.texi  misc-datatypes.texi  numbers.texi  os-interface.texi  overview.texi  procedures.texi  scheme.texinfo  scheme.texinfo.~1~  scheme.texinfo.~2~  special-forms.texi  standards.texi  strings.texi  tools.scm  vectors.texi  win32-packaging.texi
doc/sos/: Makefile.in  sos.texinfo
doc/user-manual/: Makefile.in  user.texinfo  user.texinfo.~1~  user.texinfo.~2~
src/: .dir-locals.el  .gitignore  ChangeLog  Clean.sh  Makefile.boot.in  Makefile.in  Makefile.std  Makefile.tools.in  README.txt  Setup.sh  Stage.sh  TAGS  Tags.sh  config.guess  config.sub  configure  configure.ac  configure.ac.~1~  configure.ac.~2~  dummy-config.h.in  mkinstalldirs  run-build
src/6001/: 6001.cbf  6001.pkg  6001.sf  Clean.sh  TAGS  arith.scm  edextra.scm  floppy.scm  make.scm  nodefs.scm  pic-imag.scm  pic-ops.scm  pic-read.scm  pic-reco.scm  picture.scm
src/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/berkeley-db/: README  berkeley-db.scm  configure.ac  prdb4.c  prdb4.scm
src/blowfish/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TAGS  blowfish-adapter.c  blowfish-check.scm  blowfish-check.sh  blowfish-shim.h  blowfish-test.scm  blowfish.c  blowfish.cdecl  blowfish.h  blowfish.pkg  blowfish.scm  check.scm  compile.scm  compile.sh  config.h.in  configure  configure.ac  make.scm  mit-scheme-blowfish.texi  mit-scheme-blowfish.texi.~1~  mit-scheme-blowfish.texi.~2~  optiondb.scm  tags-fix.sh
src/compiler/: .gitignore  Clean.sh  Makefile-fragment  Setup.sh  Stage.sh  TAGS  Tags.sh  choose-machine.sh  config.guess  configure
src/cref/: .gitignore  Makefile-fragment  Makefile.in  TAGS  anfile.scm  butils.scm  conpkg.scm  cref.cbf  cref.pkg  cref.sf  forpkg.scm  make.scm  mset.scm  object.scm  redpkg.scm  toplev.scm  triv.pkg
src/edwin/: .edwin-ffi  .gitignore  AUTHORS  ChangeLog  Clean.sh  Makefile-fragment  Makefile.am  Makefile.in  NEWS  README  TAGS  abbrev.scm  adapters.scm  adapters.scm.~1~  ansi.scm  argred.scm  artdebug.scm  autogen.sh  autold.scm  autosv.scm  basic.scm  bios.scm  bufcom.scm  buffer.scm  buffrm.scm  bufinp.scm  bufmnu.scm  bufout.scm  bufset.scm  bufwfs.scm  bufwin.scm  bufwiu.scm  bufwmc.scm  c-mode.scm  calias.scm  cinden.scm  class.scm  clscon.scm  clsmac.scm  comatch.scm  (+153 more)
src/etc/: Clean.sh  Setup.sh  Stage.sh  TUTORIAL  Tags.sh  build-bands.sh  build-boot-compiler.sh  c-bundle.sh  c-compile.sh  c-prepare.sh  check-gc-tables.scm  compile-boot-compiler.sh  compile-svm.sh  compile.scm  compile.sh  create-makefiles.sh  crossbin.scm  find-folded.scm  functions.sh  install-bin-symlinks.sh  iso8859-converter.scm  make-in-subdirs.sh  make-liarc-dist.sh  make-liarc.sh  make-macosx-app.sh  make-native.sh  maybe-update-file.sh  mime.types  native-prepare.sh  optiondb.scm  script.scm  std-makefile-prefix  std-makefile-suffix  test-ucd-converter.scm  ucd-converter.scm  ucd-segment-states  usermap  utilities.scm
src/ffi/: .gitignore  Clean.sh  Makefile-fragment  TAGS  build.scm  build.scm.in  cdecls.scm  compile.scm  ctypes.scm  ed-ffi.scm  ffi-test.c.stay  ffi-test.cdecl  ffi-test.h  ffi.cbf  ffi.pkg  ffi.sf  generator.scm  load.scm  make.scm  prhello.cdecl  prhello.scm  syntax.scm
src/gdbm/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TAGS  autogen.sh  check.scm  compile.scm  compile.sh  configure  configure.ac  gdbm-adapter.c  gdbm-check.scm  gdbm-check.sh  gdbm-shim.h  gdbm.cdecl  gdbm.pkg  gdbm.scm  make.scm  mit-scheme-gdbm.texi  mit-scheme-gdbm.texi.~1~  mit-scheme-gdbm.texi.~2~  optiondb.scm  tags-fix.sh
src/imail/: .gitignore  AUTHORS  ChangeLog  Makefile-fragment  Makefile.am  Makefile.in  NEWS  README  TAGS  Tags.sh  autogen.sh  compile.scm  compile.sh  configure  configure.ac  ed-ffi.scm  fake-env.scm  imail-browser.scm  imail-core.scm  imail-file.scm  imail-imap.scm  imail-mime.scm  imail-rmail.scm  imail-summary.scm  imail-top.scm  imail-umail.scm  imail-util.scm  imail.pkg  imap-response.scm  url.scm  (+7 more)
(+4369 files in other folders)
